# VISION-WALLET-PROTOTYPE-FIX01

./: CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  lib.rs  main.rs  main.tsx  working.css
src/__tests__/: smoke.test.ts
src/api/: marketApi.ts  nodeApi.ts
src/components/: VaultCard.tsx
src/crypto/: addr.rs
src/lib/: api.ts  keystore.ts
src/market/: cash.rs  cash_admin.rs  cash_store.rs  crypto_watch.rs  fiat_stripe.rs  land.rs  mod.rs  oracle.rs
src/modules/market/: Market.tsx  Orders.tsx  marketApi.ts
src/modules/wallet/: nodeApi.ts
src/routes/: Home.tsx  Market.tsx  SecureKey.tsx  Settings.tsx  Splash.tsx
src/state/: wallet.ts
src/utils/: env.ts
tests/: bech32_polymod.rs  cash_admin_cursor.rs  cash_store_migration.rs  cursor_roundtrip.rs  e2e_vision_market.rs  integration_smoke.rs  integration_vision_market.rs  market_land_p2p.rs
