[package]
name = "vision-market"
version = "0.1.0"
edition = "2021"
authors = ["Donald Etcher <founder@visionworld.io>"]
license = "AGPL-3.0"
description = "Vision marketplace backend for LAND and CASH"
repository = "https://github.com/yourusername/vision-market"

[dependencies]
axum = { version = "0.8", features = ["json", "macros", "http1", "http2", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
# stripe dependency removed temporarily because a compatible crate/version was not found on crates.io
# Add back the official Stripe Rust client or appropriate crate when integrating payments.
# stripe = "0.30.0"
lazy_static = "1.4"
hex = "0.4"
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
axum-server = "0.6"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
sha2 = "0.10"
bs58 = "0.4"
bytes = "1.4"
async-trait = "0.1"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
tracing-subscriber = "0.3"
urlencoding = "2.1"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
futures = "0.3"
tracing = "0.1"

[features]
default = []
testhooks = []
dev = []

[profile.dev]
# Faster incremental builds, keep defaults if you already have them

[workspace.metadata.clippy]
warn = [
	"clippy::pedantic",
	"clippy::nursery",
	"clippy::cargo_common_metadata",
	"clippy::dbg_macro",
	"clippy::todo",
	"clippy::unimplemented",
	"clippy::unwrap_used",
	"clippy::expect_used",
]

allow = [
	"clippy::module_name_repetitions",
	"clippy::missing_errors_doc",
	"clippy::missing_panics_doc",
	"clippy::wildcard_imports",
]
